2002-04-20  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R: Bug fix by SDR - convergence criterion was being
	calculated incorrectly.

2002-04-04  Douglas Bates  <bates@stat.wisc.edu>

	* man/getVarCov.Rd: Added an example of the type="marginal"
	Corrected misplaced brace.

	* R/VarCov.R (getVarCov.lme): Added the getVarCov functions
	contributed by Mary Lindstrom <lindstro@biostat.wisc.edu>

2002-03-27  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (anova.lme): Change strvar != "NA" to !is.na(strvar)

2002-03-05  Douglas Bates  <bates@stat.wisc.edu>

	* man/ACF.gls.Rd: Changed Jose's email address on this and all the
	other man pages.

	* R/varFunc.R: Incorporate fix from Thomas Lumley and from Setzer
	Woodrow for the logic where ifelse(length(el) == 1, is used
	instead of if(length(el) == 1)

	* R/pdMat.R: Change all vestigial instances of T and F to TRUE and
	FALSE.

2001-12-18  Douglas Bates  <bates@stat.wisc.edu>

	* R/corStruct.R: Finally resolved the print.summary.corSymm
	controversy so it prints and it prints the correct value.

2001-12-10  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R: unclassed the logLik component of an lme summary before
	trying to put it into a data frame for printing.	

2001-12-01  Douglas Bates  <bates@stat.wisc.edu>

	* R/zzMethods.R: Removed the .Alias calls.

2001-10-30  Douglas Bates  <bates@stat.wisc.edu>

	* man/pairs.lme.Rd: Modified many documentation files to pass the
	codoc checks.

2001-10-23  Douglas Bates  <bates@stat.wisc.edu>

	* man/ACF.lme.Rd: Modified many, many method definitions and
	documentation files to get them to pass the R-1.4.0 (in
	development) package checking process.

2001-10-08  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmList.R: Fixed definition of logLik.lmList to work with R
	(but it is still rather ugly).

	* R/varFunc.R: Changed definition of logLik.varComb to return a
	logLik object.

2001-10-05  Douglas Bates  <bates@stat.wisc.edu>
