@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-27
-Date: 2002/04/20
+Version: 3.1-28
+Date: 2002/07/23
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <jcp@research.bell-labs.com>,
