@@ -1,3 +1,8 @@
+2002-07-23  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/lme.R (update.lme): Fix formula handling in update methods
+	(Brian Ripley).
+
 2002-04-20  Douglas Bates  <bates@stat.wisc.edu>
 
 	* R/nlme.R: Bug fix by SDR - convergence criterion was being
